<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_detail"
    >
    <RelativeLayout
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >


    <ImageView
        android:id="@+id/img_poster"
        android:layout_width="120dp"
        android:layout_height="180dp"
        android:src="@color/teal_200"
     />

    <TextView
        android:id="@+id/text_title"
        android:padding="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_toRightOf="@+id/img_poster"
        android:layout_width="wrap_content"
        android:text="@string/title"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_height="wrap_content"
        android:maxLines="3"
    />

    <TextView
        android:id="@+id/text_bahasa"
        android:padding="5dp"
        android:layout_marginLeft="5dp"
        android:layout_below="@+id/text_title"
        android:layout_toRightOf="@+id/text_date"
        android:layout_width="wrap_content"
        android:text="@string/languange"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@color/black"
        />

    <TextView
        android:id="@+id/text_date"
        android:padding="5dp"
        android:layout_marginLeft="20dp"
        android:layout_below="@+id/text_title"
        android:layout_toRightOf="@+id/img_poster"
        android:layout_width="wrap_content"
        android:text="@string/rilis"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@color/black"
        />
    <TextView
        android:id="@+id/text_genre"
        android:padding="5dp"
        android:layout_marginLeft="20dp"
        android:layout_below="@+id/text_bahasa"
        android:layout_toRightOf="@+id/img_poster"
        android:layout_width="wrap_content"
        android:text="@string/genre"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@color/black"
        />
    <TextView
        android:id="@+id/text_rate"
        android:padding="5dp"
        android:layout_marginLeft="20dp"
        android:layout_below="@+id/text_genre"
        android:layout_toRightOf="@+id/img_poster"
        android:drawableLeft="@drawable/ic_baseline_star_rate_24"
        android:layout_width="wrap_content"
        android:text="@string/rate"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@color/black"
        />



    <TextView
        android:id="@+id/text_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="Overview"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_below="@id/img_poster"
      />

    <TextView
        android:id="@+id/text_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="desc"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:layout_below="@id/text_desc"
     />

    </RelativeLayout>

</RelativeLayout>